# reinforcement-learning-for-kalshi-trading

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
agent/: __init__.py  dqn.py
backtest/: __init__.py  data_loader.py  metrics.py  run_backtest.py  run_day_sim.py
backtest/results/: daily_metrics.csv  equity_curve.csv  eval_baseline_daily_metrics.csv  eval_baseline_equity_curve.csv  eval_dqn_daily_metrics.csv  eval_dqn_equity_curve.csv  eval_metrics.csv  metrics.csv
configs/: config.yaml
gui/: __init__.py  app.py
live_trading/: __init__.py  kalshi_client.py  live_trader.py
models/: dqn_last.pt  dqn_step_1000.pt  dqn_step_10000.pt  dqn_step_11000.pt  dqn_step_12000.pt  dqn_step_13000.pt  dqn_step_14000.pt  dqn_step_15000.pt  dqn_step_16000.pt  dqn_step_17000.pt  dqn_step_18000.pt  dqn_step_19000.pt  dqn_step_2000.pt  dqn_step_20000.pt  dqn_step_3000.pt  dqn_step_4000.pt  dqn_step_5000.pt  dqn_step_6000.pt  dqn_step_7000.pt  dqn_step_8000.pt  dqn_step_9000.pt
scripts/: eval_policy.py  export_live_summary.py  run_offline_pipeline.py  smoke_test.py  start_dashboard.py  test_kalshi_connection.py  train_dqn.py
src/: __init__.py
src/common/: __init__.py  config.py  logger.py  paths.py
tests/: __init__.py  test_data_loader.py  test_day_sim_smoke.py  test_dqn_training_smoke.py  test_env_gym_smoke.py  test_eval_policy_smoke.py  test_live_trader_simple.py  test_live_trader_smoke.py
